feat: implement snippet management features

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Snippy</title>
+    <title>Snippy - Simple snippet manager for your code and text</title>
+    <meta name="description" content="Simple snippet manager for your code and text" />
   </head>
   <body>
     <div id="root"></div>
